body.hight:auto

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             background-color: #c15236;
             font-family: 'Arial';
             padding: 2em 6em;
+            height: auto;
         }
         h1 {
             color: #fff;
