--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Kiffermanifest</title>
     <style>
         body {
-            background-color: #c15236;
+            background-color: #10ce59;
             font-family: 'Arial';
             padding: 2em 6em;
-            height: auto;
         }
         h1 {
             color: #fff;
@@ -77,7 +76,7 @@
             <input type="radio" name="acc" id="acc1" checked>
             <label for="acc1"><b>Art. 1</b> Wer baut der haut.</label>
             <div class="acc-body">
-                Diejenige Person welche den größten Anteil an der Produktion des zu rauchenen Objekts hat,
+                Diejenige Person welche den größten Anteil an der Produktion des zu rauchenden Objekts hat,
                 darf über den ersten Konsumierenden des Objekts entscheiden.
             </div>
         </div>
@@ -85,14 +84,15 @@
             <input type="radio" name="acc" id="acc2">
             <label for="acc2"><b>Art. 2</b> Wer stellt erhällt als zweites.</label>
             <div class="acc-body">
-                Text 2.1
+                Das Individium welches das zu rauchende Produkt ohne Gegenleistungen zur Verfügung stellt,
+                hat das Recht das zu rauchende Objekt als zweites zu Konsumieren.
             </div>
         </div>
         <div>
             <input type="radio" name="acc" id="acc3">
             <label for="acc3"><b>Art. 3</b> Gelobt sei die Tüte.</label>
             <div class="acc-body">
-                Text 3.1
+                Es ist nett jemanden komplimente über seine/ihre Baukünste zu machen.
             </div>
         </div>
         
