--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Kiffermanifest</title>
     <style>
         body {
-            background-color: #10ce59;
+            background-color: #009439;
             font-family: 'Arial';
             padding: 2em 6em;
         }
